[tool.poetry]
name = "urllib-test"
version = "0.1.0"
description = "Test repo for OX Security scanning"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
requests = "==2.32.3"
urllib3 = "==2.2.2"
flask = "==2.0.1"
jinja2 = "==3.0.1"
werkzeug = "==2.0.1"
pyyaml = "==5.4"
numpy = "==1.21.0"
pillow = "==9.0.0"
cryptography = "==3.4.7"
paramiko = "==2.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
